# doc/swagger.json
@@ -8,7 +8,19 @@
       "version": "1.0.0"
     },
     "basePath": "/Car",
-    "schemes": ["https", "http"],
+    "securityDefinitions": {
+    "BearerAuth": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header",
+      "description": "Enter your Bearer token in the format `Bearer <token>`"
+    }
+  },
+  "security": [
+    {
+      "BearerAuth": []
+    }
+  ],
     "paths": {
       "/user/Test": {
         "get": {
@@ -162,6 +174,12 @@
             
           },
           {
+            "name":"type",
+            "in":"formData",
+            "required":true,
+            "type":"string"
+          },
+          {
             "name": "name",
             "in": "formData",
             "required": true,
@@ -183,11 +201,16 @@
            
           },
           {
-            "name": "availability",
+            "name": "Available",
             "in": "formData",
             "required": true,
             "type":"string",
             "default": "available"
+          }
+        ],
+        "security": [
+          {
+            "BearerAuth": []
           }
         ],
        
